# Symphony

./: Cargo.toml  justfile
serialib/: Cargo.toml
serialib/src/: lib.rs  test.rs
src/: gui.rs  main.rs
